--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - docker run -e CI=true 315426346/task-manager-client-dev npm run test
 
 after_success:
-  - docker build -t 315426346/task-manager-client:latest -f ./client/Dockerfile.dev ./client
+  - docker build -t 315426346/task-manager-client:latest ./client
   - docker build -t 315426346/task-manager-api:latest -f ./api/Dockerfile.dev ./api
   - docker build -t 315426346/task-manager-mail:latest -f ./mail/Dockerfile.dev ./mail
   - docker build -t 315426346/task-manager-auth:latest -f ./auth/Dockerfile.dev ./auth
