--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ services:
   - docker
 
 before_install:
+  - openssl aes-256-cbc -K $encrypted_c4b842cad075_key -iv $encrypted_c4b842cad075_iv -in service-accout.json.enc -out service-accout.json -d
+  - curl https://sdk.cloud.google.com | bash > /dev/null;
+  - source $HOME/google-cloud-sdk/path.bash.inc
+  - gcloud components update kubectl
+  - gcloud auth activate-service-account --key-file service-account.json
   - docker build -f ./client/Dockerfile.dev -t 315426346/task-manager-client-dev:latest ./client
 
 script:
@@ -18,4 +23,5 @@ after_success:
   - docker push 315426346/task-manager-api
   - docker push 315426346/task-manager-mail
   - docker push 315426346/task-manager-auth
+
 
