--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ before_install:
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
+  
+  - gcloud config set project mimetic-heaven-418713
+  - gcloud config set compute/zone us-central1-c
+  - gcloud container clusters get-credentials task-manager-cluster
   - docker build -f ./client/Dockerfile.dev -t 315426346/task-manager-client-dev:latest ./client
 
 script:
