.travis.yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 sudo: required
+dist: focal
 services:
   - docker
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_c4b842cad075_key -iv $encrypted_c4b842cad075_iv -in service-accout.json.enc -out service-accout.json -d
+
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
@@ -12,7 +14,11 @@ before_install:
   - gcloud config set project mimetic-heaven-418713
   - gcloud config set compute/zone us-central1-c
   - gcloud container clusters get-credentials task-manager-cluster
+
+  - echo "$DOCKER_PASSWORD" | docker login --username $DOCKER_ID --password-stdin
   - docker build -f ./client/Dockerfile.dev -t 315426346/task-manager-client-dev:latest ./client
+
+
 
 script:
   - docker run -e CI=true 315426346/task-manager-client-dev npm run test
@@ -22,7 +28,7 @@ after_success:
   - docker build -t 315426346/task-manager-api:latest -f ./api/Dockerfile.dev ./api
   - docker build -t 315426346/task-manager-mail:latest -f ./mail/Dockerfile.dev ./mail
   - docker build -t 315426346/task-manager-auth:latest -f ./auth/Dockerfile.dev ./auth
-  - echo "$DOCKER_PASSWORD" | docker login --username $DOCKER_ID --password-stdin
+
   - docker push 315426346/task-manager-client
   - docker push 315426346/task-manager-api
   - docker push 315426346/task-manager-mail
