--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 env:
   global:
     - SHA=$(git rev-parse HEAD) 
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1 # config google cloud cli to not ask for user input promotes
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_c4b842cad075_key -iv $encrypted_c4b842cad075_iv -in service-accout.json.enc -out service-accout.json -d
