--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/styled-components": "^5.1.34",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
-    "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
@@ -18,6 +13,12 @@
     "react-spinners": "^0.13.8",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/styled-components": "^5.1.34"
   },
   "scripts": {
     "start": "react-scripts start",
