apply mvc arch for backends

--- a/mail/package.json
+++ b/mail/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "prod": "npx tsx ./src/index.ts"
+    "prod": "npx tsc && node ./src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,8 @@
     "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
     "typescript": "^5.4.2"
-  },
+    
+  },  
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
