--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts",
-    "prod": "npx tsx ./src/index.ts"
+    "dev": "ts-node ./src/index.ts",
+    "prod": "npx tsc && node ./src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,16 +18,15 @@
     "express": "^4.19.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/pg": "^8.11.4",
     "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6"
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/pg": "^8.11.4"
   }
 }
