--- a/auth/package.json
+++ b/auth/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "prod": "npx tsx ./src/index.ts"
+    "prod": "npx tsc && node ./src/index.js"
   },
   "keywords": [],
   "author": "",
