--- a/k8s/client.yaml
+++ b/k8s/client.yaml
@@ -26,10 +26,9 @@ kind: Service
 metadata:
   name: client-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     component: client
   ports:
     - port: 3000
       targetPort: 3000
-      nodePort: 30007
